--- a/style.css
+++ b/style.css
@@ -270,8 +270,11 @@ body
             
        @media screen and (max-width: 600px) {
        .column {
-       flex: 25%;
+       flex: 50%;
        max-width: 100%;
+      }
+      .content{
+        height: 90vh;
       }
       }     
 
